Several version updates and bug fixes